@@ -48,41 +48,45 @@
 
 	<binding id="urlbar" extends="chrome://browser/content/urlbarBindings.xml#urlbar">
 		<content sizetopopup="pref">
-			<xul:hbox anonid="textbox-container" class="autocomplete-textbox-container urlbar-textbox-container" flex="1" xbl:inherits="focused">
-				<children includes="image|deck|stack|box">
-					<xul:image class="autocomplete-icon" allowevents="true"/>
-				</children>
-				<xul:stack anonid="stack" class="urlbar-stack" flex="1">
-					<xul:vbox class="urlbar-progress-layer" xbl:inherits="pack=pmpack" flex="1">
-						<children includes="progressmeter"/>
-					</xul:vbox>
-					<xul:hbox anonid="over-link-layer" class="urlbar-textbox-container urlbar-over-link-layer" xbl:inherits="overlinkstate" flex="1">
-						<xul:hbox class="urlbar-origin-box" align="center" flex="1">
-							<xul:label anonid="origin-label" class="urlbar-origin-label" flex="1" crop="end"/>
-						</xul:hbox>
-						<xul:hbox anonid="over-link-box" class="urlbar-over-link-box" align="center">
-							<xul:label anonid="over-link-host-label" class="urlbar-over-link-host-label"/>
-							<xul:label anonid="over-link-path-label" class="urlbar-over-link-path-label" flex="1"/>
-						</xul:hbox>
-					</xul:hbox>
-					<xul:hbox class="urlbar-textbox-container urlbar-input-layer" xbl:inherits="focused,overlinkstate" flex="1">
-						<xul:hbox anonid="textbox-input-box" class="textbox-input-box urlbar-input-box" flex="1" xbl:inherits="tooltiptext=inputtooltiptext">
-							<xul:hbox class="urlbar-input-layer-children" xbl:inherits="overlinkstate">
-								<children/>
+			<xul:stack anonid="stack" class="progress-stack" flex="1">
+				<xul:vbox class="urlbar-progress-layer" xbl:inherits="pack=pmpack" flex="1">
+					<children includes="progressmeter"/>
+				</xul:vbox>
+				<xul:hbox anonid="urlbar-input-layer" flex="1">
+					<xul:hbox anonid="textbox-container" class="autocomplete-textbox-container urlbar-textbox-container" flex="1" xbl:inherits="focused">
+						<children includes="image|deck|stack|box">
+							<xul:image class="autocomplete-icon" allowevents="true"/>
+						</children>
+						<xul:stack anonid="stack" class="urlbar-stack" flex="1">
+							<xul:hbox anonid="over-link-layer" class="urlbar-textbox-container urlbar-over-link-layer" xbl:inherits="overlinkstate" flex="1">
+								<xul:hbox class="urlbar-origin-box" align="center" flex="1">
+									<xul:label anonid="origin-label" class="urlbar-origin-label" flex="1" crop="end"/>
+								</xul:hbox>
+								<xul:hbox anonid="over-link-box" class="urlbar-over-link-box" align="center">
+									<xul:label anonid="over-link-host-label" class="urlbar-over-link-host-label"/>
+									<xul:label anonid="over-link-path-label" class="urlbar-over-link-path-label" flex="1"/>
+								</xul:hbox>
 							</xul:hbox>
-							<html:input anonid="input" class="autocomplete-textbox urlbar-input textbox-input uri-element-right-align" flex="1" allowevents="true"
-								    xbl:inherits="tooltiptext=inputtooltiptext,onfocus,onblur,value,type,maxlength,disabled,size,readonly,placeholder,tabindex,accesskey"/>
-						</xul:hbox>
-						<xul:hbox class="urlbar-input-layer-children" xbl:inherits="overlinkstate">
-							<children includes="hbox"/>
-						</xul:hbox>
+							<xul:hbox class="urlbar-textbox-container urlbar-input-layer" xbl:inherits="focused,overlinkstate" flex="1">
+								<xul:hbox anonid="textbox-input-box" class="textbox-input-box urlbar-input-box" flex="1" xbl:inherits="tooltiptext=inputtooltiptext">
+									<xul:hbox class="urlbar-input-layer-children" xbl:inherits="overlinkstate">
+										<children/>
+									</xul:hbox>
+									<html:input anonid="input" class="autocomplete-textbox urlbar-input textbox-input uri-element-right-align" flex="1" allowevents="true"
+										    xbl:inherits="tooltiptext=inputtooltiptext,onfocus,onblur,value,type,maxlength,disabled,size,readonly,placeholder,tabindex,accesskey"/>
+								</xul:hbox>
+								<xul:hbox class="urlbar-input-layer-children" xbl:inherits="overlinkstate">
+									<children includes="hbox"/>
+								</xul:hbox>
+							</xul:hbox>
+						</xul:stack>
 					</xul:hbox>
-				</xul:stack>
-			</xul:hbox>
-			<xul:dropmarker anonid="historydropmarker" class="autocomplete-history-dropmarker urlbar-history-dropmarker"
-			                allowevents="true" xbl:inherits="open,enablehistory,parentfocused=focused"/>
-			<xul:popupset anonid="popupset" class="autocomplete-result-popupset"/>
-			<children includes="toolbarbutton"/>
+					<xul:dropmarker anonid="historydropmarker" class="autocomplete-history-dropmarker urlbar-history-dropmarker"
+							allowevents="true" xbl:inherits="open,enablehistory,parentfocused=focused"/>
+					<xul:popupset anonid="popupset" class="autocomplete-result-popupset"/>
+					<children includes="toolbarbutton"/>
+				</xul:hbox>
+			</xul:stack>
 		</content>
 
 		<implementation>
