@@ -1,6 +1,7 @@
 Version next
 * Drop support for Firefox 16.0 and older.
 * Fix protocol hiding in the toolbar and pop-up.
+* Update location bar progress styling.
 
 Version 2012.11.11.16b
 * Make compatible with Firefox 19 CSS parser changes.
